--- a/css/style.css
+++ b/css/style.css
@@ -40,3 +40,22 @@ ul li a:hover{
     font-size: 16px;
     font-weight: 700;
 }
+
+.container .row .col-8{
+    color: #fff;
+}
+
+.promo{
+    background-color: #fff;
+
+}
+
+.promo .fw-bold{
+    margin-left: 50px;
+}
+
+.promo .prodis{
+    margin-top: 20px;
+    margin-left: 50px;
+    margin-right: 50px;
+}
